# LightningSearch

./: .gitignore  README.md  ROADMAP.md
csv_search/: Makefile  build.zig  build.zig.zon
csv_search/src/: csv.zig  index.zig  index_manager.zig  main.zig  server.zig  sorted_array.zig
csv_search/src/swift/: interface.h  main.swift
csv_search/swift/: interface.h  main.swift
lightning_search/: IDEA.md  Makefile  \  build.zig  build.zig.zon  logo.txt
lightning_search/electron_app/: app.js  index.html  main.js
lightning_search/lib/: ffi.h
lightning_search/parquet_bindings/: Makefile  cbindgen.toml
lightning_search/parquet_bindings/src/: lib.rs
lightning_search/python/: pyproject.toml  setup.py
lightning_search/python/lightning_search/: __init__.py  ffi.h  lightning_search.c  lightning_search.pyi  lightning_search.pyx
lightning_search/python/lightning_search.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lightning_search/python/tests/: beir_eval.py  test.py
lightning_search/src/: ffi.zig  main.zig  root.zig  tests.zig
lightning_search/src/compression/: elias_fano.zig  huffman.zig
lightning_search/src/indexing/: index.zig  index_manager.zig
lightning_search/src/parsing/: arrow.zig  csv.zig  json.zig  parquet.zig
lightning_search/src/server/: server.zig
lightning_search/web_app/: app.js  index.html
search_anything/: .gitignore  Makefile  ROADMAP.md  build.zig  build.zig.zon  parquet_bindings.h
search_anything/electron_app/: app.js  main.js  preload.js
search_anything/lib/: parquet_bindings.h
search_anything/parquet_bindings/: Cargo.toml  Makefile  build.rs
search_anything/parquet_bindings/src/: lib.rs  main.rs
search_anything/src/: csv.zig  doc_store.zig  elias_fano.zig  file_utils.zig  flat_index.zig  huffman.zig  index.zig  index_manager.zig  json.zig  main.zig  parquet.zig  radix_trie.zig  server.zig  sorted_array.zig  string_utils.zig
search_anything/swift/: interface.h  main.swift
(+27 files in other folders)
